fixed add_product and get_product needed authority
